--- a/mp.metroeguide.web/Views/Copy/Index.cshtml
+++ b/mp.metroeguide.web/Views/Copy/Index.cshtml
@@ -77,7 +77,7 @@
                         <h4>Page Information</h4>
                     </div>
                     <div class="panel-body">
-                        @{ Html.RenderPartial("_PageInfo");}
+                        @{ await Html.RenderPartialAsync("_PageInfo");}
                     </div>
                 </div>
 
