--- a/mp.metroeguide.web/Views/Shared/_Layout.cshtml
+++ b/mp.metroeguide.web/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="~/css/bundle.css" />
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top">
+     <div class="navbar navbar-default navbar-fixed-top">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
@@ -33,6 +33,9 @@
                     </li>
                     <li @if (ViewBag.ActivePage == "clients") { @activeClass; }>
                         @Html.ActionLink("Client Manager", "Index", "clients")
+                    </li>
+                    <li @if (ViewBag.ActivePage == "customers") { @activeClass ; }>
+                        @Html.ActionLink("Customer Manager", "Index", "customers")
                     </li>
                     <li @if (ViewBag.ActivePage == "linkViewer") { @activeClass; }>
                         @Html.ActionLink("Link Viewer", "Index", "linkViewer")
